force-app/main/default/objects/Appeasement__c/Appeasement__c.object-meta.xml
<CustomObject>
    <description
  >Refund money on an order (pro-rated over order lines), if required after approval</description>
    <label>Appeasement</label>
    <nameField>
        <displayFormat>A{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Appeasements</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>