force-app/main/default/objects/Appeasement__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>The total amount of all Appeasement items. Always negative values to indicate return.</description>
    <inlineHelpText>The total amount of all Appeasement items. Always negative values to indicate return.</inlineHelpText>
    <label>Amount</label>
    <summarizedField>AppeasementItem__c.Amount__c</summarizedField>
    <summaryForeignKey>AppeasementItem__c.Appeasement__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>