force-app/main/default/objects/Appeasement__c/fields/Credit_Memo__c.field-meta.xml
<CustomField>
    <fullName>Credit_Memo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Credit Memo</label>
    <referenceTo>CreditMemo</referenceTo>
    <relationshipLabel>Appeasements</relationshipLabel>
    <relationshipName>Appeasements</relationshipName>
    <type>Lookup</type>
</CustomField>